<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">whisper</string>
    <string name="test">テスト</string>
    <string name="user">ユーザ</string>
    <string name="upload">投稿</string>
    <string name="search">検索</string>
    <string name="cancel">キャンセル</string>
    <string name="whisper">whisper</string>
    <string name="likes">いいね</string>
    <string name="name">Name</string>
    <string name="save">保存</string>
    <string name="following">フォロー中</string>
    <string name="followers">フォロワー</string>
    <string name="login">ログイン</string>
    <string name="email">メール</string>
    <string name="password">パスワード</string>
    <string name="password2">パスワードを再度入力してください。</string>
    <string name="register">登録</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">EditText string = %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lb_menu_timeline">タイムライン</string>
    <string name="lb_menu_Search">検索</string>
    <string name="lb_menu_whisper">ウィスパー</string>
    <string name="lb_menu_myProfile">プロフィール</string>
    <string name="lb_menu_follow">フォロー</string>
    <string name="lb_menu_profileEdit">プロフィール編集</string>
    <string name="username_1">Username----1</string>
    <string name="content_1">Content----1</string>
    <string name="time_1">Time----1</string>
    <string name="timeline">Timeline</string>
    <string name="always_believe_that_good_things_will_happen">Always believe that good things will happen</string>
    <string name="registration">登録</string>
    <string name="logout">Logout</string>
    <string name="_00">00</string>
</resources>