<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_timeline"
        android:orderInCategory="100"
        android:title="@string/lb_menu_timeline"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_Search"
        android:orderInCategory="100"
        android:title="@string/lb_menu_Search"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_whisper"
        android:orderInCategory="100"
        android:title="@string/lb_menu_whisper"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_follow"
        android:orderInCategory="100"
        android:title="@string/lb_menu_follow"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profileEdit"
        android:orderInCategory="100"
        android:title="@string/lb_menu_profileEdit"
        app:showAsAction="never"/>


</menu>