<?xml version="1.0" encoding="utf-8"?>
<!--follow list
    follower and following　通用
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgIconFollow"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_android_black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_follow_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/username_1"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv__number_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/following"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_number_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>



</LinearLayout>