<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:focusable="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_android_black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/username_1"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/content_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_whispers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/time_1"
            android:textColor="@color/black"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/tv_follow"
        style="@android:style/Widget.ImageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="#FFFFFF"
        android:paddingEnd="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/great"
        tools:ignore="ContentDescription,RtlSymmetry" />

    <TextView
        android:id="@+id/conutfollow"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:text="@string/_00"
        tools:ignore="RtlSymmetry" />

</LinearLayout>